--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Notion Widgets
-description: This is a collection of widgets I wrote for use in Notion. 
-If you have any questions or feedback, feel free to get in touch.
+description: This is a collection of widgets I wrote for use in Notion. If you have any questions or feedback, feel free to get in touch.
 baseurl: "/notion-widgets"
 url: "https://arielrezinn.github.io/"
 # logo: [Location of the logo]
